src/test/ui/issues/issue-57924.stderr
error[E0109]: type arguments are not allowed for this type
  --> $DIR/issue-57924.rs:5:16
   |
LL |         Self::<E>(e)
   |                ^ type argument not allowed

error: aborting due to previous error

For more information about this error, try `dustc --explain E0109`.
